# 24KQuantGPT

./: .gitignore  AGENTS.md  API_DOC.md  MCP_GUIDE.md  README.md  pyproject.toml  restart.sh  start.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  AppRoutes.tsx  index.css
frontend/src/api/: client.ts  factorMining.ts
frontend/src/components/: AdvancedSettings.tsx  BacktestForm.tsx  CloudValidationCard.tsx  FactorMiningDashboard.tsx  GroupReturnsTable.tsx  Header.tsx  MetricCard.tsx  ProgressTracker.tsx  ReportViewer.tsx  ResultsDashboard.tsx  ShareCardButton.tsx  StrategyBacktest.tsx  TabNavigation.tsx  TaskHistory.tsx  TaskHistoryItem.tsx
frontend/src/hooks/: useBacktest.ts  useTaskHistory.ts
frontend/src/pages/: AdminLoginPage.tsx  AdminPage.tsx  FactorWallPage.tsx
frontend/src/types/: backtest.ts
quantgpt/: __init__.py  __main__.py  alpha_tracker.py  api_server.py  auth.py  backtest.py  daily_summary.py  db.py  expression_parser.py  factor_mining_backtest.py  factor_mining_service.py  factor_mining_store.py  iteration.py  market_data.py  mcp_server.py  mcp_tracking.py  models.py  report.py  schemas.py  wq_brain_client.py
quantgpt/migrations/versions/: 012_add_factor_mining_tables.py
quantgpt/routes/: admin.py  backtest_tasks.py  comparison.py  composite.py  daily_summary.py  factor_library.py  factor_mining.py  iteration_routes.py  wq_brain.py  wq_brain_batch.py
tests/: test_factor_mining_service.py
