[project]
name = "quantgpt"
version = "0.1.0"
description = "QuantGPT — 用自然语言回测 A 股因子"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "baostock>=0.8.8",
    "quantstats>=0.0.62",
    "mcp>=1.0",
    "uvicorn>=0.30",
    "fastapi>=0.110",
    "openai>=1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["quantgpt*"]
